Fix wrap text issue

--- a/client/src/main/resources/client/scenes/styles/game.css
+++ b/client/src/main/resources/client/scenes/styles/game.css
@@ -33,6 +33,7 @@
     -fx-font-family: "Roboto-Thin";
     -fx-font-size: 15;
     -fx-text-fill: "white";
+    -fx-wrap-text: true;
 }
 
 .score{
